@@ -1,10 +1,12 @@
 Changes since version 1.2.0
 ---------------------------
 
+- Fixed a problem with the random selection of SSL endpoints.
+
 - Ice is now supported on Windows 98 SE. See INSTALL.WINDOWS.
 
-- Fixed an incorrect complaint in the Slice parser about a change
-  of meaning for enumeration constant definitions.
+- Fixed an incorrect complaint in the Slice parser about a change of
+  meaning for enumeration constant definitions.
 
 - The glacierrouter and glacierstarter processes used to abort if
   given a non-existent config file.
